# timeLaspeOBS

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  build.rs
libobs-sys/: Cargo.toml  build.rs  build_win.rs  wrapper.h
libobs-wrapper/: Cargo.toml
libobs-wrapper/src/: lib.rs  log.rs  module.rs
obs-frontend-api-sys/: Cargo.toml
src/: audio.rs  frontend.rs  lib.rs
