[package]
name = "timeLapseOBS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[members]
members = ["libobs-sys", "libobs-wrapper"]

[dependencies]
libobs-sys = {path = "./libobs-sys"}
libobs-wrapper = {path = "./libobs-wrapper"}
dasp = { version = "0.11.0", features = [ "interpolate", "signal", "ring_buffer", "interpolate-linear" ] }
log = "0.4"

[lib]
name = "timelapseobs"
crate-type = ["cdylib"]
