[package]
name = "libobs-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.60"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"
regex = "1.0"
winreg = "0.10"

[target.'cfg(target_os = "macos")'.build-dependencies]
shellexpand = "2.0"
